Added Perfecto API key env variable

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,6 +2,9 @@
 
 name: My_JOB_NAME
 
+env:
+  Perfecto_API_Key: ${{ PERFECTO_API_SECRET }}
+
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "master" branch
